# SeaBee-FieldUploader

./: .gitignore  LICENSE  README.md  app.py  defaults.txt  pyproject.toml  run.bat  run.sh  setup.bat  setup.sh
.github/workflows/: build-windows-exe.yml
app/: SeaBee-FieldUploader.bat  SeaBee-FieldUploader.lnk  gui.py  pyproject.toml  readme.md
app/resources/: app.py  defaults.txt  rclone.conf  rclone.conf.template
resources/: bucket.conf.template  defaults.txt
server/backend/: credentials.py  delivertosigma.py  makeclusters.py  scanfielduploads.py
server/frontend/fielduploads/: clusters.php  index.php  merge_clusters.php  points.php  split_cluster.php  update_cluster.php
server/frontend/webuploads/: index.php  upload.php
