[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seabee-fielduploader"
version = "0.1.0"
description = "SeaBee FieldUploader (Tkinter GUI) for uploading field data via rclone to MinIO"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
seabee-fielduploader = "app.gui:main"

[tool.setuptools]
packages = ["app"]
